tests-integration/fixtures/checking/259_exhaustive_boolean_partial/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
testPartialTrue :: Boolean -> Int
testPartialFalse :: Boolean -> Int
testExhaustive :: Boolean -> Int
testNestedPartial :: Boolean -> Boolean -> Int
testWildcardBoolean :: Boolean -> Int

Types

Diagnostics
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: false
  --> 4:21..5:12
  |
4 | testPartialTrue b = case b of
  |                     ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 3:1..3:34
  |
3 | testPartialTrue :: Boolean -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: true
  --> 8:22..9:13
  |
8 | testPartialFalse b = case b of
  |                      ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 7:1..7:35
  |
7 | testPartialFalse :: Boolean -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: false
  --> 18:11..19:14
   |
18 |   true -> case y of
   |           ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 16:1..16:47
   |
16 | testNestedPartial :: Boolean -> Boolean -> Int
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
